 (0.6.?)
 * Backwards-incompatible change in Sensor observer API
 * Sensor strategies now call back with raw Python datatype values rather than
   KATCP formatted values.
 * Tornado ioloop / iostream based sensor sampling
 * Tornado ioloop / iostream based server
 * Sever message handlers can now return futures
 * Threaded message handle compatibility mode + new Async mode (performance
   penalty for threaded mode, but is default for now)
 * Tornado ioloop / iostream based client AsyncClient, single implementation for
   both BlockingClient and CallbackClient based on thin wrapper around
   AsyncClient.
 * Clients now stop much faster due to removal of 0.5s select timeout in
   previous implementation.
 * Backwards incompatible change in BlockingClient.blocking_request(): now
   returns a failed reply rather than raising an exception for timeouts (like
   CallbackClient.blocking_request() always did).
 * Threadsafe mode (default for BlockingClient and CallbackClient) available, but
   comes with performance overhead even async for usage.
 * Hundreds of test-suite reliablility improvements.
	
14 July 2014 (0.5.5)
 * Add utility code to katcp.version.py that other modules can use to parse svn
   or git revisions for use in build-state informs or sensors
 * Add katcp.client.request_check: a convenience function for making KATCP
   requests and raising an exception if there is an error.
 * Add katcp.testutils.handle_mock_req() to allow mocked testing of server request
   handlers and dispatch, removing the need to start() a DeviceServer for
   handler tests.
 * Make katcp.testutils.WaitingMock robust against race conditions
 * Explicitly list set of base KATCP requests in katcp.server.BASE_REQUESTS
 * Make method-name to KATCP-name function available outside KATCP server
   meta-class
 * Improvements to logging (i.a. prevents issues when using SocketHandler)
 * Docstring cleanups

10 June 2013 (0.5.4)